= Change Log

== 🐟

- update gradle plugins and dependencies

== 🥚

- update to kotlin/java, and prepping for new apis

== 🍩

- hotfix for moving from red shift, to heroku

== 🌶

- pull to refresh implemented, and update caching.

== 🍌

- updated app colors
- updated app icon
- updated app name

== 🍎

- Initial Release