@@ -6,15 +6,12 @@ buildscript {
     maven { url 'https://maven.fabric.io/public' }
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:3.1.2'
+    classpath 'com.android.tools.build:gradle:3.2.0-alpha15'
     classpath 'com.google.gms:google-services:3.2.0'
     classpath 'com.google.firebase:firebase-plugins:1.1.5'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
     classpath "com.diffplug.spotless:spotless-plugin-gradle:3.10.0"
-
-    // fabric swears that this is okay...
-    //noinspection GradleDynamicVersion
-    classpath 'io.fabric.tools:gradle:1.+'
+    classpath 'io.fabric.tools:gradle:1.25.4'
   }
 }
 
@@ -32,6 +29,7 @@ repositories {
   google()
   maven { url 'https://maven.fabric.io/public' }
   maven { url 'http://oss.jfrog.org/artifactory/oss-snapshot-local' }
+  maven { url 'https://jitpack.io' }
 }
 
 def getGitSha() {
@@ -159,7 +157,6 @@ dependencies {
 
   implementation 'com.google.firebase:firebase-core:16.0.0'
   implementation 'com.google.firebase:firebase-perf:16.0.0'
-  implementation 'com.google.firebase:firebase-firestore:17.0.1'
   implementation 'com.google.firebase:firebase-config:16.0.0'
 
   implementation 'com.google.dagger:dagger:2.15'
